--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "rosell-dk/webp-convert": "^2.9",
         "ext-curl": "*",
         "ext-xlswriter": "*",
-        "ext-gd": "*"
+        "ext-gd": "*",
+        "paragonie/easyrsa": "^0.6.0"
     },
     "require-dev": {
         "symfony/var-dumper": "^4.2",
@@ -54,7 +55,8 @@
     "scripts": {
         "post-autoload-dump": [
             "@php think service:discover",
-            "@php think vendor:publish"
+            "@php think vendor:publish",
+            "@php think key:generate"
         ]
     }
 }
