--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
         "ext-curl": "*",
         "ext-xlswriter": "*",
         "ext-gd": "*",
-        "paragonie/easyrsa": "^0.6.0"
+        "paragonie/easyrsa": "^0.6.0",
+        "ext-openssl": "*"
     },
     "require-dev": {
         "symfony/var-dumper": "^4.2",
