增加api应用后台管理

--- a/composer.json
+++ b/composer.json
@@ -57,7 +57,9 @@
         "post-autoload-dump": [
             "@php think service:discover",
             "@php think vendor:publish",
-            "@php think key:generate"
+            "@php think migrate:run",
+            "@php think key:generate",
+            "@php think version"
         ]
     }
 }
